[package]
name = "mysql_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.1"
tokio = "1.18.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"
http = "0.2.7"
reqwest = "0.11.10"
dotenv = "0.15.0"
mysql = "22.1.0"